--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -24,13 +24,17 @@
     ]
   },
   "dependencies": {
+    "@date-io/moment": "^2.8.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@minigest/ui": "^0.2.0",
     "axios": "^0.19.2",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^5.3.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
