--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -24,7 +24,7 @@
     ]
   },
   "dependencies": {
-    "@date-io/moment": "^2.8.0",
+    "@date-io/moment": "1.x",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
