--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ markdown = "^3.2.2"
 django-filter = "^2.3.0"
 drf-nested-routers = "^0.91"
 django-cors-headers = "^3.4.0"
+django-polymorphic = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
