--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ django-filter = "^2.3.0"
 drf-nested-routers = "^0.91"
 django-cors-headers = "^3.4.0"
 django-polymorphic = "^2.1.2"
+django-rest-polymorphic = "^0.1.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
